<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/playing_album_art"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/playing_album_art"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_album_art"
        tools:srcCompat="@drawable/default_album_art" />

    <TextView
        android:id="@+id/playing_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:singleLine="false"
        android:text="@string/playing_title"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playing_album_art"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playing_artist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:singleLine="false"
        android:text="@string/playing_artist"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/playing_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playing_album_art"
        app:layout_constraintTop_toBottomOf="@+id/playing_title" />

    <TextView
        android:id="@+id/playing_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:singleLine="false"
        android:text="@string/playing_album"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playing_album_art" />
</androidx.constraintlayout.widget.ConstraintLayout>